--- a/index.css
+++ b/index.css
@@ -1,8 +1,9 @@
 body {
-    color:white;
-    background:#222;
+    color: white;
+    background: #222;
     font-family: Arial, sans-serif
 }
 #pasfoto {
     float: right;
+    margin: 0px;
 }
